fix CHOP background color, add style alignment for BCH button

--- a/ui/src/main/webapp/picsureui/overrides/styles.css
+++ b/ui/src/main/webapp/picsureui/overrides/styles.css
@@ -2,3 +2,8 @@
 #frmAuth0Login {
 	width: 400px;
 }
+
+/* BCH logo is not square */
+.a0-button-ldap-connector {
+	padding-left: 9px;
+}
